--- a/ssf-day4/package.json
+++ b/ssf-day4/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/sistasi/fsf.git"
   },
-  "author": "",
+  "author": "Lydia S",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sistasi/fsf/ssf-day4/issues"
