--- a/ssf-day6/package.json
+++ b/ssf-day6/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "ssf-day5",
+  "name": "ssf-day6",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "app.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -12,16 +13,12 @@
   },
   "author": "Lydia S",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/sistasi/fsf/ssf-day5/issues"
-  },
-  "homepage": "https://github.com/sistasi/fsf/ssf-day5#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
-    "moment": "^2.22.2",
+    "mysql": "^2.16.0",
     "path": "^0.12.7",
-    "request": "^2.88.0"
+    "q": "^1.5.1"
   }
 }
